networkpolicy/network-policy-defination.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metdata:
  name: SP_db
spec:
  podSelector:
    matchLabels:
      name: myapp-db
  policyTypes:
    - Ingress
    - Egress
    ingress:
    - from:
      # rule 1 NODE TYPE
      - podSelector:
          matchLabels:
            name: myapp-web
        nameSpaceSelector:
          matchLabels:
            name: prod
        # rule 1 NODE TYPE
      - ipBlock:
          cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 3306
    egress:
    - to:
      - ipBlock:
        cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
